--- a/main.ipynb
+++ b/main.ipynb
@@ -26,7 +26,7 @@
    "source": [
     "# constants\n",
     "\n",
-    "UNITS = 256\n",
+    "UNITS = 512\n",
     "\n",
     "BUFFER_SIZE = 120\n",
     "BATCH_SIZE = 64\n",
@@ -55,7 +55,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "text_path = os.path.join('data', 'choc_recipes.txt')\n",
+    "text_path = os.path.join('data', 'recipe_dataset.txt')\n",
     "# Using readlines()\n",
     "file1 = open(text_path, 'r')\n",
     "Lines = file1.readlines()\n",
@@ -77,31 +77,14 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "ingredients_list_list = []\n",
-    "for i_string in ingredients:\n",
-    "    i = i_string.replace(', ', '*')\n",
-    "    i = i.replace(' ', '_')\n",
-    "    i = i.replace('*', ', ')\n",
-    "\n",
-    "    ingredients_list_list.append(i)\n",
-    "\n",
-    "ingredients = ingredients_list_list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Name count: 17258\n",
-      "Ingredient count: 17258\n",
-      "Step count: 17258\n"
+      "Name count: 36652\n",
+      "Ingredient count: 36652\n",
+      "Step count: 36652\n"
      ]
     }
    ],
@@ -745,6 +728,8 @@
     "  #shape_checker(x, 'batch t units')\n",
     "  #shape_checker(self.last_attention_weights, 'batch t s')\n",
     "\n",
+    "  x, state_2 = self.rnn(x, initial_state=state_2)\n",
+    "\n",
     "  # Step 4. Generate logit predictions for the next token.\n",
     "  logits = self.output_layer(x)\n",
     "  #shape_checker(logits, 'batch t target_vocab_size')\n",
@@ -1134,7 +1119,7 @@
    "outputs": [],
    "source": [
     "@Translator.add_method\n",
-    "def translate(self, ingredients, names, *, max_length=50, temperature=0.0):\n",
+    "def translate(self, ingredients, names, *, max_length=400, temperature=0.0):\n",
     "  context = self.encoder.convert_input(ingredients, names)\n",
     "  batch_size = tf.shape(names)[0]\n",
     "  \n",
